# meridian

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rss.json  turbo.json
.github/workflows/: build-docker.yaml  deploy-services.yaml  nuxthub.yml
apps/backend/: README.MD  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
apps/backend/src/: app.ts  index.ts
apps/backend/src/durable_objects/: sourceScraperDO.ts
apps/backend/src/lib/: articleFetchers.ts  embeddings.ts  logger.ts  parsers.ts  rateLimiter.ts  tryCatchAsync.ts  utils.ts
apps/backend/src/prompts/: articleAnalysis.prompt.ts
apps/backend/src/routers/: durableObjects.router.ts  events.router.ts  openGraph.router.ts  (+2 more)
apps/backend/test/: parseArticle.spec.ts  rateLimiter.spec.ts  utils.spec.ts
apps/briefs/: Dockerfile  app.py  build.sh  docker-compose.yml  push-docker.sh  requirements.txt
apps/briefs/src/: app.py  clustering.py  events.py  helpers.py  llm.py  manual_test.py  test_app.py
apps/frontend/: .env.example  nuxt.config.ts  package.json
apps/scrapers/: README.MD  package.json  wrangler.jsonc
apps/scrapers/src/: app.ts  index.ts
scripts/: sources.csv  test_report.py  test_tts.py  upload_rss_sources.py  upload_sources.py
services/meridian-ml-service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
services/meridian-ml-service/src/meridian_ml_service/: config.py  dependencies.py  embeddings.py  main.py  schemas.py
services/report-service/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
services/report-service/src/: events.py  helpers.py  llm.py
utils/: ubuntu-setup.sh
(+28 files in other folders)
